# sekai-kabuka-kobetu

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  api.yml  app.db  codes.csv  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py  filings.py  history.py  indicators.py  items.py  quote.py  search.py  stream.py
backend/app/api/v1/: filings.py  history.py  indicators.py  items.py  quote.py  search.py  stream.py
backend/app/application/interfaces/: broadcaster.py  cache_service.py  filing_service.py  indicator_service.py  stock_service.py
backend/app/application/use_cases/: get_filings.py  get_history.py  get_indicators.py  get_quote.py  search_tickers.py
backend/app/core/: config.py
backend/app/data/: broadcaster.py  cache.py  master.py  poller.py
backend/app/domain/entities/: filing.py  stock.py  ticker.py
backend/app/domain/repositories/: item_repository.py  master_repository.py
backend/app/infrastructure/cache/: in_memory_cache.py
backend/app/infrastructure/database/: db.py  item_repository.py  models.py
backend/app/infrastructure/master/: csv_master_repository.py
backend/app/infrastructure/streaming/: in_memory_broadcaster.py  poller.py
backend/scripts/: export_openapi.py
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  orval.config.ts  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FullChart.tsx  FundamentalsPanel.tsx  (+3 more)
(+4 files in other folders)
