[project]
name = "template-fastapi-backend"
version = "0.1.0"
description = "FastAPI template backend"
requires-python = ">=3.10,<3.11"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.2,<2.0.0",
  "ruff>=0.6.9,<1.0.0",
  "types-PyYAML>=6.0.12.20240917,<7.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
exclude = ["alembic"]
